Updated tests and Sonar improvements