@@ -1,6 +1,5 @@
 package com.example.demo.config;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -34,15 +33,15 @@ public class SwaggerConfig {
     AuthorizationScope authorizationScope = new AuthorizationScope("global", "accessEverything");
     AuthorizationScope[] authorizationScopes = new AuthorizationScope[1];
     authorizationScopes[0] = authorizationScope;
-    return Arrays.asList(new SecurityReference("JWT", authorizationScopes));
+    return List.of(new SecurityReference("JWT", authorizationScopes));
   }
 
   @Bean
   public Docket api() {
     return new Docket(DocumentationType.SWAGGER_2)
         .apiInfo(apiInfo())
-        .securityContexts(Arrays.asList(securityContext()))
-        .securitySchemes(Arrays.asList(apiKey()))
+        .securityContexts(Collections.singletonList(securityContext()))
+        .securitySchemes(List.of(apiKey()))
         .select()
         .apis(RequestHandlerSelectors.basePackage("com.example.demo.controller"))
         .paths(PathSelectors.any())
